adjust about page

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@ ga('send', 'pageview');
 										<h2>Hello!</h2>
 										<p>Welcome to my page!</p>
 									</header>
-									I have created this blog for me. It serves to document my learning and to share my progress and thoughts. <br><blockquote>“TWENTY YEARS FROM NOW YOU WILL BE MORE DISAPPOINTED BY THE THINGS THAT YOU DIDN’T DO THAN BY THE ONES YOU DID DO. SO THROW OFF THE BOWLINES. SAIL AWAY FROM THE SAFE HARBOR. CATCH THE TRADE WINDS IN YOUR SAILS. EXPLORE. DREAM. DISCOVER.” – MARK TWAIN</blockquote> This is me setting sail, catching the wind in my sails, exploring and documenting my discoveries.
+									I have created this blog for me. It serves to document my learning and to share my progress and thoughts. <br><blockquote>“TWENTY YEARS FROM NOW YOU WILL BE MORE DISAPPOINTED BY THE THINGS THAT YOU DIDN’T DO THAN BY THE ONES YOU DID DO. SO THROW OFF THE BOWLINES. SAIL AWAY FROM THE SAFE HARBOR. CATCH THE TRADE WINDS IN YOUR SAILS. EXPLORE. DREAM. DISCOVER.” – MARK TWAIN</blockquote> This is me catching the wind in my sails, exploring and documenting my discoveries.
 								</div>
 							</section>
 
